--- a/notification/templates/notification/_notification_menu.html
+++ b/notification/templates/notification/_notification_menu.html
@@ -1,7 +1,7 @@
 {% if count > 0 %}
-<li role="presentation" class="menu-notification dropdown">
+<li role="presentation" class="menu-notification dropdown" id="notification-alert">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-    <span class="glyphicon glyphicon-envelope pull-left" aria-hidden="true"></span>
+    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
     <span class="badge badge-danger">{{ count }}</span> {{ unread_message }}
     <span class="caret" aria-hidden="true"></span>
   </a>
