--- a/exercise/templates/exercise/staff/_assess_info.html
+++ b/exercise/templates/exercise/staff/_assess_info.html
@@ -23,16 +23,31 @@
             <dt>{% trans "Includes late penalty" %}</dt>
             <dd>-{{ submission.late_penalty_applied|percent }}%</dd>
             {% endif %}
-            <dt>{% trans "Submission number" %}</dt>
+            <dt>{% trans "Submissions" %}</dt>
             <dd>
-                {{ index }}.
-                ({% trans "total" %}
+                <ol>
+                  {% for s in submissions reversed %}
+                  <li>
+                    {% if s = submission %}
+                    {{ s.submission_time }}
+                    {% points_badge s %}
+                    {% else %}
+                    <a href="{{ s|url:'submission-inspect' }}">
+                      {{ s.submission_time }}
+                      {% points_badge s %}
+                    </a>
+                    {% endif %}
+                  </li>
+                  {% endfor %}
+                </ol>
+
+                {% trans "In total" %}
                 {{ summary.get_submission_count }}{% if exercise.max_submissions %}
                 / {{ exercise|max_submissions:submission.submitters.first }}{% if is_teacher %}
                 <form method="post" action="{{ submission|url:'submission-increase-max' }}" style="display:inline;" title="{% trans 'Add one extra submission for the student in this exercise.' %}">
               		{% csrf_token %}
               		<input class="btn btn-primary" type="submit" value="+1" />
-              	</form>{% endif %}{% endif %})
+              	</form>{% endif %}{% endif %}
             </dd>
         </dl>
 
