Translate new strings

--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -3,7 +3,7 @@
 
 <div class="well">
     {% if exercise.confirm_the_level %}
-    <p>{% trans "Exercise status" %}</p>
+    <p>{% trans "Current status" %}</p>
     <p class="exercise-info-points">
       {% points_badge summary %}
     </p>
