--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -16,13 +16,15 @@
     {% with instance_url=instance|url %}
     <div class="col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail course-thumbnail">
-            <div class="image" aria-hidden="true">
-                {% if instance.image %}
-                <img src="{{ instance.image.url }}" alt="{{ instance.course.name }}" />
-                {% else %}
-                <h1 class="glyphicon glyphicon-book"></h1>
-                {% endif %}
-            </div>
+            <a href="{{ instance_url }}">
+                <div class="image" aria-hidden="true">
+                    {% if instance.image %}
+                    <img src="{{ instance.image.url }}" alt="{{ instance.course.name }}" />
+                    {% else %}
+                    <h1 class="glyphicon glyphicon-book"></h1>
+                    {% endif %}
+                </div>
+            </a>
             <div class="caption">
                 <h3>
                 	<a href="{{ instance_url }}">
