--- a/exercise/templates/exercise/_points_badge.html
+++ b/exercise/templates/exercise/_points_badge.html
@@ -10,8 +10,12 @@
   {% if passed %}{% trans "Accepted" %}{% elif graded %}{% trans "Rejected" %}{% else %}{% trans "Submitted" %}{% endif %}
 </span>
 {% elif confirmable_points %}
-<span class="badge badge-danger">
+<span class="badge badge-danger" data-toggle="tooltip" title="{% trans 'You must submit here to confirm your points. Submissions are received until the end of the course.' %}">
   {% trans "Missing" %}
+</span>
+{% elif exercise_page %}
+<span class="badge">
+  {% trans "Not submitted" %}
 </span>
 {% endif %}
 
