--- a/templates/base.html
+++ b/templates/base.html
@@ -178,7 +178,7 @@
                 <div class="modal-content">
                     <div class="modal-progress">
                       <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%" data-msg-error="{% trans 'Loading failed!' %}">
                           {% trans "Loading..." %}
                         </div>
                       </div>
@@ -197,7 +197,7 @@
                 <div class="modal-content">
                     <div class="modal-progress">
                       <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%" data-msg-error="{% trans 'Loading failed!' %}">
                           {% trans "Loading..." %}
                         </div>
                       </div>
