--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -38,7 +38,7 @@
   <h3 class="text-center">{% trans "Submission received." %}</h3>
   <p class="text-center badge-placeholder"></p>
   <button type="button" class="btn btn-success center-block read-feedback" data-dismiss="modal">
-    {% trans "Read the feedback" %}
+    {% trans "Go to feedback" %}
   </button>
 </div>
 
