--- a/exercise/templates/exercise/staff/_submissions_table.html
+++ b/exercise/templates/exercise/staff/_submissions_table.html
@@ -41,7 +41,7 @@
                 {% endif %}
             </td>
             <td>
-                {{ submission.status }}
+                {{ submission.status|submission_status }}
             </td>
             <td>
                 {{ submission.grade }}
