--- a/notification/templates/notification/_notification_menu.html
+++ b/notification/templates/notification/_notification_menu.html
@@ -8,7 +8,7 @@
   <ul class="dropdown-menu">
     {% for entry in notifications %}
     <li>
-      <a href="{{ entry.link }}" class="alert-link">
+      <a href="{{ entry.link }}" class="page-modal">
         {{ entry.name }}
       </a>
     </li>
