--- a/diploma/templates/diploma/_diploma_button.html
+++ b/diploma/templates/diploma/_diploma_button.html
@@ -6,6 +6,12 @@
     <button{% if grade == 0 %} disabled="yes"{% endif %} class="btn btn-default">
       {% blocktrans %}Get course diploma{% endblocktrans %}
     </button>
+    {% if grade == 0 and is_course_staff %}
+    <button class="btn btn-link">
+      <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+      {% trans "Open grade 0 diploma" %}
+    </button>
+    {% endif %}
   </p>
 </form>
 {% endif %}
