--- a/access/templates/access/accept_files_form.html
+++ b/access/templates/access/accept_files_form.html
@@ -20,7 +20,7 @@
 	{% endfor %}
 	{% if post_url or not result.accepted %}
 	<div class="form-group">
-		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary" />
+		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary aplus-submit" />
 	</div>
 	{% endif %}
 </form>
