--- a/access/templates/access/accept_git_form.html
+++ b/access/templates/access/accept_git_form.html
@@ -13,7 +13,7 @@
 	</div>
 	{% if post_url or not result.accepted %}
 	<div class="form-group">
-		<input type="submit" id="git_submit" value="{% trans 'Submit' %}" class="btn btn-primary" />
+		<input type="submit" id="git_submit" value="{% trans 'Submit' %}" class="btn btn-primary aplus-submit" />
 	</div>
 	{% endif %}
 </form>
