--- a/access/templates/access/accept_git_user.html
+++ b/access/templates/access/accept_git_user.html
@@ -28,7 +28,7 @@
 	{% endif %}
     {% if post_url or not result.accepted %}
     <div class="form-group">
-        <input type="submit" class="btn btn-primary" value="{% trans 'Request grading of my repository' %}" />
+        <input type="submit" class="btn btn-primary aplus-submit" value="{% trans 'Request grading of my repository' %}" />
     </div>
     {% endif %}
 </form>
