--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -138,7 +138,7 @@
 		<input type="hidden" name="_checksum" value="{{ result.form.checksum }}" />
 		{% endif %}
 		{% if not result.form.disabled %}
-		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary" />
+		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary aplus-submit" />
 		{% endif %}
 	</div>
 	{% endif %}
