--- a/course/templates/course/_group_select.html
+++ b/course/templates/course/_group_select.html
@@ -17,7 +17,7 @@
     <li>
       <form id="group-select-form" method="post" action="{{ instance|url:'group-select' }}">
         {% csrf_token %}
-        <button type="submit" name="group" value="0">
+        <button type="submit" name="group" value="0" data-group-size="1">
           {% trans "Submit alone" %}
         </button>
       </form>
@@ -26,7 +26,7 @@
     <li>
       <form id="group-select-form" method="post" action="{{ instance|url:'group-select' }}">
         {% csrf_token %}
-        <button type="submit" name="group" value="{{ group.id }}">
+        <button type="submit" name="group" value="{{ group.id }}" data-group-size="{{ group.size }}">
           {% blocktrans with collaborators=group.collaborators %}
           Submit with {{ collaborators }}
           {% endblocktrans %}
