--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -112,7 +112,7 @@
 			</nav>
       {% endif %}
 
-			<div class="exercise-response" data-aplus-group="{{ exercise.min_group_size }}-{{ exercise.max_group_size }}">
+			<div class="exercise-response" data-aplus-group="{{ exercise.min_group_size }}-{{ exercise.max_group_size }}"{% if summary.get_submission_count > 0 %} data-aplus-group-fixed="{{ summary.get_group_id }}"{% endif %}>
 				{% include "_messages.html" %}
 				<div>
 					{{ page.content|safe }}
