Fix invalid css class

--- a/edit_course/templates/edit_course/build_log.html
+++ b/edit_course/templates/edit_course/build_log.html
@@ -14,7 +14,7 @@
         <td>{{ request_time }}</td>
       </tr>
       {% if not updated %}
-        <tr class=".table-warning">
+        <tr class="warning">
           <td>{% trans 'Build finished' %}</td>
           <td>{% trans 'Not yet built' %}</td>
         </tr>
