--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -8,9 +8,9 @@
     {% if not item|is_published:now %}<small><span class="label label-default">{% trans "Appears" %} {{ item.publish }}</span></small>{% endif %}
     {% if is_course_staff %}<small><span class="label label-default">{{ item.audience|news_audience }}</span></small>{% endif %}
   </h4>
-  <p>
+  <div>
     {{ item.body|safe }}
-  </p>
+  </div>
 </div>
 {% endfor %}
 
@@ -28,9 +28,9 @@
         {% if not item|is_published:now %}<small><span class="label label-default">{% trans "Appears later" %}</span></small>{% endif %}
         {% if is_course_staff %}<small><span class="label label-default">{{ item.audience|news_audience }}</span></small>{% endif %}
       </h4>
-      <p class="list-group-item-text collapse{% if not item.collapsed %} in{% endif %}" id="news{{ item.id }}">
+      <div class="list-group-item-text collapse{% if not item.collapsed %} in{% endif %}" id="news{{ item.id }}">
         {{ item.body|safe }}
-      </p>
+      </div>
     </a>
     {% if item.begin_more %}
     <a class="list-group-item" href="#more-news" data-toggle="collapse" role="button" aria-controls="more-news" aria-expanded="false">
