Polish group selection UI

--- a/exercise/templates/exercise/model/_file_submit_form.html
+++ b/exercise/templates/exercise/model/_file_submit_form.html
@@ -11,6 +11,6 @@
     {% endfor %}
   </fieldset>
   <div class="form-group">
-    <input class="btn btn-primary" type="submit" value="{% trans 'Submit' %}" />
+    <input class="btn btn-primary aplus-submit" type="submit" value="{% trans 'Submit' %}" />
   </div>
 </form>
