--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -15,7 +15,7 @@
 {% endfor %}
 
 {% if news %}
-<div class="panel panel-default">
+<div class="panel panel-default news-panel">
   <div class="panel-heading">
     <h4 class="panel-title">{% trans "Course news" %}</h4>
   </div>
