--- a/exercise/templates/exercise/_user_toc.html
+++ b/exercise/templates/exercise/_user_toc.html
@@ -12,6 +12,12 @@
       <a href="{{ module.link }}" class="{% if module|is_in_maintenance %}maintenance{% endif %}">{{ module.name }}</a>
     </h3>
     <h4>
+      {% if module.requirements|length > 0 %}
+      <span class="label label-info">
+        {% trans "Requires" %}:
+        {% for requirement in module.requirements %}{{ requirement }}{% endfor %}
+      </span>
+      {% endif %}
       <small>{{ module.opening_time }} &ndash; {{ module.closing_time }}</small>
     </h4>
     {% else %}
@@ -25,7 +31,13 @@
       {% endif %}
     </h3>
     <h4>
-        <span class="label label-info">{% trans 'Opens' %} {{ module.opening_time }}</span> <small>&ndash; {{ module.closing_time }}</small>
+      {% if module.requirements|length > 0 %}
+      <span class="label label-info">
+        {% trans "Requires" %}:
+        {% for requirement in module.requirements %}{{ requirement }}{% endfor %}
+      </span>
+      {% endif %}
+      <span class="label label-info">{% trans 'Opens' %} {{ module.opening_time }}</span> <small>&ndash; {{ module.closing_time }}</small>
     </h4>
     {% endif %}
     {% include "exercise/_children.html" with children=module.flatted after_open=after_open %}
