--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -115,7 +115,13 @@
 			<div class="exercise-response" data-aplus-group="{{ exercise.min_group_size }}-{{ exercise.max_group_size }}"{% if summary.get_submission_count > 0 %} data-aplus-group-fixed="{{ summary.get_group_id }}"{% endif %}>
 				{% include "_messages.html" %}
 				<div>
+					{% if page.content.strip %}
 					{{ page.content|safe }}
+					{% elif submission and submission.status == "waiting" %}
+					<div class="alert alert-info">
+						{% trans "Your submission has been accepted for grading." %}
+					</div>
+					{% endif %}
 				</div>
 				{% include "exercise/_exercise_wait.html" %}
 			</div>
