Show module requirements in UI

--- a/course/templates/course/module.html
+++ b/course/templates/course/module.html
@@ -43,7 +43,7 @@
 	</p>
 	{% endif %}
 
-  {% include "exercise/_children.html" with children=children after_open=True %}
+  {% include "exercise/_children.html" with children=children accessible=True %}
 {% endblock %}
 
 {% block sidecontent %}
