--- a/course/templates/course/_siblings.html
+++ b/course/templates/course/_siblings.html
@@ -1,9 +1,11 @@
 {% load i18n %}
 {% load course %}
+{% load exercise %}
 <nav class="row siblings">
 
     {% if next %}
-    {% if next|has_opened:now %}
+    {% module_accessible next as accessible %}
+    {% if accessible %}
     <a href="{{ next.link }}" class="pull-right btn btn-link">
         {{ next.name }} &raquo;
     </a>
@@ -21,7 +23,8 @@
     {% endif %}
 
     {% if previous %}
-    {% if previous|has_opened:now %}
+    {% module_accessible previous as accessible %}
+    {% if accessible %}
     <a href="{{ previous.link }}" class="pull-left btn btn-link">
         &laquo; {{ previous.name }}
     </a>
