--- a/access/templates/access/exercise_head.html
+++ b/access/templates/access/exercise_head.html
@@ -11,6 +11,8 @@
 
 		{% if result.error %}
 		<meta name="status" value="error" />
+		{% elif result.rejected %}
+		<meta name="status" value="rejected" />
 		{% elif result.accepted %}
 		<meta name="status" value="accepted" />
 		{% if result.wait and result.queue < 3 and not exercise.never_wait %}
