--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -44,7 +44,7 @@
 				<ul class="nav navbar-nav exercise-nav">
 					<li>
 						<a href="{% if summary.get_best_submission %}{{ summary.get_best_submission|url:'submission-plain' }}{% else %}#{% endif %}">
-							{% if not exercise.confirm_the_level %}{% trans "Points" %}{% endif %}
+							{% if not exercise.category.confirm_the_level %}{% trans "Points" %}{% endif %}
 							{% points_badge summary %}
 						</a>
 					</li>
@@ -75,7 +75,7 @@
 				        	{% endfor %}
 				        </ul>
 					</li>
-					{% if not exercise.confirm_the_level %}
+					{% if not exercise.category.confirm_the_level %}
 					<li class="navbar-text">
 						{% if not exercise.is_closed %}
 							<small>
