Lifesupport and archiving support for courses.

--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -95,7 +95,7 @@
 					</li>
 					{% endif %}
 				</ul>
-				{% if is_course_staff or is_student and exercise.is_closed %}
+				{% if is_course_staff or is_student and exercise.can_show_solutions %}
 				{% if exercise.model_answers %}
 				<a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'exercise-model' }}">
 					<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
