--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -63,7 +63,7 @@
               {% endfor %}
           </ul>
       </li>
-      {% if is_course_staff or is_student and exercise.is_closed %}
+      {% if is_course_staff or is_student and exercise.can_show_solutions %}
       {% if exercise.model_answers %}
       <li class="menu-model">
         <a href="{{ exercise|url:'exercise-model' }}">
