--- a/course/templates/course/_group_info.html
+++ b/course/templates/course/_group_info.html
@@ -2,10 +2,10 @@
 {% if id %}
   <span data-group-id="{{ id }}"></span>
   {% blocktrans with collaborators=collaborators %}
-  You are now submitting with {{ collaborators }}
+  You are now submitting with {{ collaborators }}.
   {% endblocktrans %}
   {{ avatars }}
 {% else %}
   <span data-group-id="0"></span>
-  {% trans "You are now submitting alone" %}
+  {% trans "You are now submitting alone." %}
 {% endif %}
