--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -137,23 +137,23 @@
                             <div class="list-group">
                               <a href="{{ module|createurl:'exercise,chapter' }}" class="list-group-item">
                                 <div><strong>{% trans "Content chapter" %}</strong></div>
-                                {% trans "A remote content page loaded in as a chapter" %}
+                                {% trans "A remote content page loaded in as a chapter." %}
                               </a>
                               <a href="{{ module|createurl:'exercise' }}" class="list-group-item">
                                 <div><strong>{% trans "Exercise" %}</strong></div>
-                                {% trans "A remote exercise page loaded in for posting submissions" %}
+                                {% trans "A remote exercise page loaded in for posting submissions." %}
                               </a>
                               <a href="{{ module|createurl:'exercise,lti' }}" class="list-group-item">
                                 <div><strong>{% trans "LTI Exercise" %}</strong></div>
-                                {% trans "A remote exercise page loaded in for posting submissions including signed LTI course and student information" %}
+                                {% trans "A remote exercise page loaded in for posting submissions including signed LTI course and student information." %}
                               </a>
                               <a href="{{ module|createurl:'exercise,attachment' }}" class="list-group-item">
                                 <div><strong>{% trans "Exercise with attachment" %}</strong></div>
-                                {% trans "A local page accepting files and initiating remote grading with teacher provided grading attachment" %}
+                                {% trans "A local page accepting files and initiating remote grading with teacher provided grading attachment." %}
                               </a>
                               <a href="{{ module|createurl:'exercise,static' }}" class="list-group-item">
                                 <div><strong>{% trans "Static exercise" %}</strong></div>
-                                {% trans "A local page with editable markup content" %}
+                                {% trans "A local page with editable markup content." %}
                               </a>
                             </div>
                           </div>
