--- a/course/templates/course/_course_dropdown_menu.html
+++ b/course/templates/course/_course_dropdown_menu.html
@@ -13,7 +13,7 @@
 	{% empty %}
 	<li role="presentation">
 		<a href="/">
-			{% trans "Begin with enrolling in a course" %}
+			{% trans "Begin by enrolling in a course." %}
 		</a>
 	</li>
 	{% endfor %}
