--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -103,6 +103,14 @@
 				</a>
 				{% endif %}
 				{% endif %}
+				{% if is_course_staff or is_student %}
+				{% if exercise.templates %}
+				<a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'exercise-template' }}">
+					<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+					{% trans "Show exercise template" %}
+				</a>
+				{% endif %}
+				{% endif %}
 				{% if is_course_staff %}
 				<a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'submission-list' }}">
 					<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
