--- a/access/templates/access/course.html
+++ b/access/templates/access/course.html
@@ -7,11 +7,29 @@
 <div class="page-header">
 	<h1>{{ course.name }}</h1>
 </div>
-<p>
-	<a href="{{ plus_config_url }}">
-		{{ plus_config_url }}
-	</a>
-</p>
+<h3>{% trans "Service URLs for A+" %}</h3>
+<table class="table">
+  <tr>
+    <td>{% trans "A+ configuration JSON" %}</td>
+    <td>
+      <a href="{{ plus_config_url }}">
+        {{ plus_config_url }}
+      </a>
+    </td>
+  </tr>
+  <tr>
+    <td>{% trans "Build/make output retrieval" %}</td>
+    <td>
+    {% if build_log_url %}
+      <a href="{{ build_log_url }}">
+        {{ build_log_url }}
+      </a>
+    {% else %}
+    <p>{% trans "Requires the gitmanager plugin" %}</p>
+    {% endif %}
+    </td>
+  </tr>
+</table>
 <h3>{% trans "Available exercises" %}</h3>
 <div class="list-group">
 	{% for exercise in exercises %}
