Finish unofficial submits tests and badges

--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -18,6 +18,11 @@
                 {% trans "Late" %} -{{ summary.get_penalty|percent }} %
             </span>
             {% endif %}
+            {% if summary.is_unofficial %}
+            <span class="badge">
+                {% trans "Unofficial" %}
+            </span>
+            {% endif %}
         </small>
     </strong></p>
     {% points_progress summary %}
